# Hardware-Driver-implementation-

./: README.md  main.py
MyotronicsDriver/: config.py  hardware.py
hardwaredriver_c/: CMakeLists.txt  CMakeSettings.json  README.md  package.bat  version.rc
hardwaredriver_c/src/core/: commands.c  commands.h  error_codes.c  error_codes.h  logger.c  logger.h  serial_interface.c  serial_interface.h
hardwaredriver_c/src/core/main/: config.c  config.h  main.c  service.c  service.h  window_placement.c  window_placement.h
hardwaredriver_c/src/core/main/pipes_implementation/: service_pipes.c  service_pipes.h
hardwaredriver_c/src/core/mode_functions/: Mode_config.txt  byte_sync.c  byte_sync.h  control_functions.c  control_functions.h  emg_version.c  emg_version.h  mode.c  mode.h  mode_0.c  mode_0.h  mode_42.c  mode_42.h  mode_43.c  mode_43.h  mode_43_test.c  mode_44.c  mode_44.h  mode_44_sweep_scan.c  mode_44_sweep_scan.h  mode_51.c  mode_51.h  mode_52.c  mode_52.h  mode_53.c  mode_53.h  mode_56.c  mode_56.h  mode_57.c  mode_57.h  mode_base.c  mode_base.h  mode_manager.c  mode_manager.h  mode_sweep.c  mode_sweep.h  simulation_function_generator_600mhz.c  simulation_function_generator_600mhz.h  timing.h
hardwaredriver_c/src/data/: serialize_deserialize.h  serialize_deserialzie.c  uuid.c  uuid.h  windows_queue.c  windows_queue.h
hardwaredriver_c/src/gui/: IncludeFlow.txt
hardwaredriver_c/src/gui/sweep_data/: create_ui.c  create_ui.h  data_table.c  data_table.h  graph_plot_window.c  graph_plot_window.h  namespace_options.c  namespace_options.h  printer.c  printer.h  printer_driver.c  printer_driver.h  sweep_data_reusable_ui.c  sweep_data_reusable_ui.h  sweep_data_ui_reusable.py  sweep_mode.ui  utils.c  utils.h
hardwaredriver_c/src/gui/sweep_data/tilt_windows/: image_window_options.c  image_window_options.h  picture_window_functions.c  picture_window_functions.h  picture_window_functions.py  picture_window_reusable.c  picture_window_reusable.h  picture_window_reusable.py
hardwaredriver_c/src/gui/sweep_data/ui_classes/: commons.h  data_class.c  data_class.h  graph.c  graph.h  graph.py  graph_plot_g_val___and_graph_update_plot_val.c  image_helpers.c  image_helpers.h  scrollable_frame.c  scrollable_frame.h
hardwaredriver_c/src/gui/system_options/: display_tilt_supplemental_windows.c  display_tilt_supplemental_windows.h
hardwaredriver_c/src/gui/utils/: image_rotate.c  image_rotate.h  play_video.c  play_video.h  process_manager.c  process_manager.h  video_defaults.h  wait_for_process.c  wait_for_process.h  windows_api.c  windows_api.h
